Add support for mipi display EE0350ET-2CP for i.MX7ULP
Add support for mipi display EE0350ET-2CP for i.MX7ULP.

--- a/drivers/video/fbdev/mxc/Kconfig
+++ b/drivers/video/fbdev/mxc/Kconfig
@@ -83,6 +83,11 @@ config FB_MXC_TIANMA_PANEL_TM050JDHG33
 	depends on FB_MXC_DISP_FRAMEWORK || FB_MXC_SYNC_PANEL
 	depends on FB_MXC_MIPI_DSI_NORTHWEST
 
+config FB_MXC_NEWVISION_PANEL_NV3051D
+	tristate "NewVision Panel NV3051D"
+	depends on FB_MXC_DISP_FRAMEWORK || FB_MXC_SYNC_PANEL
+	depends on FB_MXC_MIPI_DSI_NORTHWEST
+
 config FB_MXC_BT656
 	tristate "MXC BT656 and BT1120 output"
 	depends on FB_MXC_SYNC_PANEL
