--- a/arch/arm/boot/dts/imx7ulp.dtsi
+++ b/arch/arm/boot/dts/imx7ulp.dtsi
@@ -69,7 +69,7 @@
                 ranges;
 
                 /* global autoconfigured region for contiguous allocations */
-                linux,cma {
+                cma: linux,cma {
                         compatible = "shared-dma-pool";
                         reusable;
                         size = <0xC000000>;
@@ -279,6 +279,8 @@
 			assigned-clocks = <&pcc2 IMX7ULP_CLK_LPUART4>;
 			assigned-clock-parents = <&scg1 IMX7ULP_CLK_SOSC_BUS_CLK>;
 			assigned-clock-rates = <24000000>;
+			dmas = <&edma1 0 18>, <&edma1 0 17>;
+			dma-names = "tx","rx";
 			status = "disabled";
 		};
 
