Improve target fsimx7ulp for kernel version 5.4.70
picocoremx7ulp.dts:
- Add CMA setup
- Add new memory regions for RPMsg communication
- Switch to dedicated usbotg1 id configuration
- Add default touch mxt336u
- Improve rpmsg audio support
fsimx7ulp_defconfig:
- Add necessary packages for RPMsg communication
fsl_rpmsg_i2s.c/imx-i2s-rpmsg.c
- Improve support rpmsg audio support sgtl5000

--- a/sound/soc/fsl/Kconfig
+++ b/sound/soc/fsl/Kconfig
@@ -461,6 +461,7 @@ config SND_SOC_IMX_RPMSG
 	select SND_SOC_IMX_I2S_RPMSG
 	select SND_SOC_FSL_RPMSG_I2S
 	select SND_SOC_RPMSG_WM8960
+	select SND_SOC_RPMSG_SGTL5000
 	select SND_SOC_RPMSG_AK4497
 	select SND_SOC_RPMSG_CS42XX8
 	help
