--- a/arch/arm/boot/dts/picocoremx7ulp.dts
+++ b/arch/arm/boot/dts/picocoremx7ulp.dts
@@ -52,6 +52,9 @@
 //#define CONFIG_PICOCOREMX7ULP_CAPTOUCH_SITRONIX
 //#define CONFIG_PICOCOREMX7ULP_CAPTOUCH_ILITEK
 
+/* CMA: Set 72 MB for Continuous Memory Allocator */
+#define CONFIG_PICOCOREMX7ULP_CMA_SIZE 0x4800000
+
 /* WLAN */
 #define CONFIG_PICOCOREMX7ULP_WLAN
 
@@ -88,6 +91,7 @@
 
 #include "imx7ulp.dtsi"
 #include <dt-bindings/input/input.h>
+#include <dt-bindings/pwm/pwm.h>
 
 / {
 	model = "F&S PicoCoreMX7ULP";
@@ -102,6 +106,33 @@
 	memory {
 		device_type = "memory";
 		reg = <0x60000000 0x40000000>;
+	};
+
+	reserved-memory {
+		#address-cells = <1>;
+		#size-cells = <1>;
+		ranges;
+
+		vdev0vring0: vdev0vring0@9ff00000 {
+			reg = <0x9ff00000 0x8000>;
+			no-map;
+		};
+		vdev0vring1: vdev0vring1@9ff08000 {
+			reg = <0x9ff08000 0x8000>;
+			no-map;
+		};
+		vdev1vring0: vdev1vring0@9ff10000 {
+			reg = <0x9ff10000 0x8000>;
+			no-map;
+		};
+		vdev1vring1: vdev1vring1@9ff18000 {
+			reg = <0x9ff18000 0x8000>;
+			no-map;
+		};
+		vdev1vring3 {
+			reg = <0x9ff20000 0xe0000>;
+			no-map;
+		};
 	};
 
 	backlight {
@@ -189,14 +220,6 @@
 		};
 	};
 
-	extcon_usb1: extcon_usb1 {
-		compatible = "linux,extcon-usb-gpio";
-		id-gpio = <&gpio_ptc 13 GPIO_ACTIVE_HIGH>;
-		pinctrl-names = "default", "sleep";
-		pinctrl-0 = <&pinctrl_extcon_usb1>;
-		pinctrl-1 = <&pinctrl_extcon_usb1>;
-	};
-
 	pf1550-rpmsg {
 		compatible = "fsl,pf1550-rpmsg";
 		sw1_reg: SW1 {
@@ -254,7 +277,7 @@
 	};
 
 	rpmsg_i2s: rpmsg-i2s {
-		compatible = "fsl,imx7ulp-rpmsg-i2s";
+		compatible = "fsl,fsimx7ulp-rpmsg-i2s";
 		/* the audio device index in m4 domain */
 		fsl,audioindex = <0> ;
 		status = "okay";
@@ -265,9 +288,26 @@
 
 	sound-rpmsg {
 		compatible = "fsl,imx-audio-rpmsg";
-		model = "rpmsg-audio";
+		model = "sgtl5000-audio";
 		cpu-dai = <&rpmsg_i2s>;
+		rpmsg-out;
+		rpmsg-in;
 	};
+
+/* only allowed if rpmsg is disabled */
+#if 0
+	imx7ulp-cm4 {
+		compatible = "fsl,imx7ulp-cm4";
+		ipc-only;
+		rsc-da=<0x1fff8000>;
+		mbox-names = "tx", "rx", "rxdb";
+		mboxes = <&mu 0 1
+			  &mu 1 1
+			  &mu 3 1>;
+		memory-region = <&vdev0vring0>, <&vdev0vring1>,
+				<&vdev1vring0>, <&vdev1vring1>;
+	};
+#endif
 
 	/* F&S board information */
 	bdinfo {
@@ -275,6 +315,11 @@
 		board_name = "PicoCoreMX7ULP";
 		arch = "fsimx7ulp";
 	};
+};
+
+/* RAM size for Continues Memory Allocator */
+&cma {
+	size = <CONFIG_PICOCOREMX7ULP_CMA_SIZE>;
 };
 
 &cpu0 {
@@ -295,9 +340,10 @@
 	disp-dev = "mipi_dsi_northwest";
 	display = <&display0>;
 	status = "okay";
-	/* This is a dummy definition for a display, needed by the mxsfb driver.
-	   These values will get overwritten by the panel-specific values, defined in the
-	   respective mipi driver file */
+	/* This is a dummy definition for a display, needed by the mxsfb
+	 * driver. These values will get overwritten by the panel-specific
+	 * values, defined in the respective mipi driver file
+	 */
 	display0: display@0 {
 		bits-per-pixel = <16>;
 		bus-width = <24>;
@@ -399,9 +445,11 @@
 	bus-width = <4>;
 	vqmmc-supply = <&reg_vsd_3v3>;
 #ifdef CONFIG_PICOCOREMX7ULP_WLAN
-	vmmc-supply = <&wlreg_on>; /* VDD misused for RESET_WLAN/BT */
+	/* VDD misused for RESET_WLAN/BT */
+	vmmc-supply = <&wlreg_on>;
 	non-removable;
-	wifi-host; /* needed for BCM wifi cards */
+	/* needed for BCM wifi cards */
+	wifi-host;
 	enable-sdio-wakeup;
 #endif
 #ifdef CONFIG_PICOCOREMX7ULP_SD_CD
@@ -416,10 +464,6 @@
 &usbotg1 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_usbotg1>;
-	/* Set ID Pin as extcon device instead of dedicated ID. There is
-	 * a problem with resume mode if we are using dedicated ID function.
-	 */
-	extcon = <0>, <&extcon_usb1>;
 	srp-disable;
 	hnp-disable;
 	adp-disable;
@@ -510,7 +554,6 @@
 	};
 #endif
 
-	//TODO: check if atmel firmware works
 #ifdef CONFIG_PICOCOREMX7ULP_CAPTOUCH_MXT224
 	mxt224@4a {
 		compatible = "atmel,maxtouch";
@@ -531,9 +574,12 @@
 	mxt336u@4a {
 		compatible = "atmel,maxtouch";
 		reg = <0x4a>;
+		/* interrupt of mxt336U can be either level or edge interrupt.
+		 * In mxt336u-gloves.cfg it is configured as level.
+		 */
 		interrupt-parent = <&gpio_ptf>;
-		interrupts = <0 IRQ_TYPE_EDGE_FALLING>;
-		atmel,cfg_name = "atmel/mxt336u.cfg";
+		interrupts = <0 IRQ_TYPE_LEVEL_LOW>;
+		atmel,cfg_name = "atmel/mxt336u-gloves.cfg";
 #if CONFIG_ADP_MIPI2MIPI1_REVISION < 120
 		atmel,reset-gpio = <&gpio_ptf 1 GPIO_ACTIVE_LOW>;
 #else
@@ -675,7 +721,7 @@
 #endif
 
 				/* USHC1_VSEL */
-			//	IMX7ULP_PAD_PTE14__SDHC1_VS	0x43
+			//	IMX7ULP_PAD_PTE14__SDHC1_VS	0x00043
 			>;
 		};
 
@@ -815,12 +861,7 @@
 			fsl,pins = <
 				/* USB otg Power enable */
 				IMX7ULP_PAD_PTE15__USB0_PWR	0x00003
-			>;
-		};
-
-		pinctrl_extcon_usb1: extcon1grp {
-			fsl,pins = <
-				IMX7ULP_PAD_PTC13__PTC13	0x10003
+				IMX7ULP_PAD_PTC13__USB0_ID	0x10003
 			>;
 		};
 	};
