--- a/arch/arm/configs/fsimx7ulp_defconfig
+++ b/arch/arm/configs/fsimx7ulp_defconfig
@@ -17,7 +17,9 @@ CONFIG_MODULE_UNLOAD=y
 CONFIG_MODVERSIONS=y
 # CONFIG_BLK_DEV_BSG is not set
 CONFIG_ARCH_MXC=y
+CONFIG_SOC_IMX6Q=y
 CONFIG_SOC_IMX7ULP=y
+CONFIG_SMP=y
 # CONFIG_SWP_EMULATE is not set
 CONFIG_VMSPLIT_2G=y
 CONFIG_ARM_PSCI=y
@@ -380,6 +382,7 @@ CONFIG_SND_SOC_FSL_SSI=y
 CONFIG_SND_SOC_FSL_SAI=y
 CONFIG_SND_SOC_FSL_ESAI=y
 CONFIG_SND_IMX_SOC=y
+CONFIG_SND_SOC_IMX_RPMSG=y
 CONFIG_SND_SOC_IMX_RPMSG_SGTL5000=y
 CONFIG_SND_SOC_IMX_SGTL5000=n
 CONFIG_SND_SOC_IMX_MQS=y
@@ -447,7 +450,12 @@ CONFIG_MXC_PXP_V2=y
 CONFIG_MXC_PXP_V3=y
 CONFIG_STAGING=y
 CONFIG_STAGING_MEDIA=y
+CONFIG_MAILBOX=y
+CONFIG_IMX_MBOX=y
 # CONFIG_IOMMU_SUPPORT is not set
+CONFIG_REMOTEPROC=y
+CONFIG_IMX_REMOTEPROC=y
+CONFIG_RPMSG_VIRTIO=y
 CONFIG_EXTCON_USB_GPIO=y
 CONFIG_IIO=y
 CONFIG_IMX7D_ADC=y
