Add display support for Rongen T070QYH
- Rework of panel driver panel-novatek-nt35521.c
- Initialization does not work correctly. Push_cmd_list does not send
    correct data, because wrong payload is given. Order in
    nt35521_enable was wrong. After init data is written, we reset the
    ic, so init data is not present anymore. Therefore first reset and
    then setup ic registers.
- Add possibility setup init data for each display.
- Add device-tree picocoremx8mm-ddr3l/lpddr4-lcdif-rgt070qyh-13cp.dts
- Improve compatible string for device-trees picocoremx8mm-ddr3l/lpddr4-
lcdif-g050tan01.dts

--- a/arch/arm64/boot/dts/F+S/Makefile
+++ b/arch/arm64/boot/dts/F+S/Makefile
@@ -17,6 +17,7 @@ dtb-$(CONFIG_ARCH_MXC) += picocoremx8mm-lpddr4.dtb \
 			  picocoremx8mm-lpddr4-lcdif-adp-mipi2lvds1-g133han01.dtb \
 			  picocoremx8mm-lpddr4-lcdif-adp-mipi2mipi1-ee0350et-2cp.dtb \
 			  picocoremx8mm-lpddr4-lcdif-adp-mipi2rgb.dtb \
+			  picocoremx8mm-lpddr4-lcdif-rgt070qyh-13cp.dtb \
 			  tbs2.dtb \
 			  tbs2-lcdif-adp-mipi2rgb-etm0350.dtb \
 			  picocoremx8mm-ddr3l.dtb \
@@ -26,7 +27,8 @@ dtb-$(CONFIG_ARCH_MXC) += picocoremx8mm-lpddr4.dtb \
 			  picocoremx8mm-ddr3l-lcdif-adp-mipi2lvds1-j070wvtc0211-single-display.dtb \
 			  picocoremx8mm-ddr3l-lcdif-adp-mipi2lvds1-g133han01.dtb \
 			  picocoremx8mm-ddr3l-lcdif-adp-mipi2mipi1-ee0350et-2cp.dtb \
-			  picocoremx8mm-ddr3l-lcdif-adp-mipi2rgb.dtb
+			  picocoremx8mm-ddr3l-lcdif-adp-mipi2rgb.dtb \
+			  picocoremx8mm-ddr3l-lcdif-rgt070qyh-13cp.dtb
 dtb-$(CONFIG_ARCH_MXC) += efusmx8x.dtb
 dtb-$(CONFIG_ARCH_MXC) += picocoremx8mn-lpddr4.dtb \
 			  picocoremx8mn-lpddr4-lcdif-tc358775-g070y2-l01.dtb \
