Add driver for lontium-lt9211 RGB2LVDS converter

--- a/arch/arm/configs/fsimx6ul_defconfig
+++ b/arch/arm/configs/fsimx6ul_defconfig
@@ -347,7 +347,7 @@ CONFIG_SOC_CAMERA=y
 CONFIG_DRM=y
 # CONFIG_FB_MX3 is not set
 CONFIG_FB_MXS=y
-# CONFIG_FB_MXC is not set
+CONFIG_FB_MXS_LT9211=y
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_LCD_CLASS_DEVICE=y
 CONFIG_LCD_L4F00242T03=y
