--- a/drivers/video/fbdev/mxc/Kconfig
+++ b/drivers/video/fbdev/mxc/Kconfig
@@ -106,6 +106,12 @@ config FB_MXS_SII902X
 	tristate "Si Image SII9022 DVI/HDMI Interface Chip"
 	depends on FB_MXS && I2C
 
+config FB_MXS_LT9211
+	tristate "Lontium LT9211 RGB-to-LVDS module"
+	depends on FB_MXS && I2C
+	help
+	Driver support for the LT9211 RGB-to-LVDS module
+
 config FB_MXC_DCIC
 	tristate "MXC DCIC"
 	depends on FB_MXC_SYNC_PANEL
