Improve fsimx6sx device trees for eMMC/GPU support
- Add possibility to disable dynamically GPU support, if no GPU is
present. This will be detected and set by U-Boot.
- Add new alias "rpmsg" to device trees.
- Add possibility to dynamically set if nand or emmc will be used as
boot medium. This will also be detected and set by U-Boot.

--- a/arch/arm/boot/dts/picocoma9x.dts
+++ b/arch/arm/boot/dts/picocoma9x.dts
@@ -56,9 +56,6 @@ lcd_wvga {				\
  */
 //#define CONFIG_PICOCOMA9X_LCD_18BPP_DE
 
-/* GPU is only available on CPU variants MCIMX6X3... and MCIMX6X4... */
-#define CONFIG_PICOCOMA9X_GPU
-
 /* TOUCH */
 #define CONFIG_PICOCOMA9X_4WTOUCH_SX8655_ONBOARD /* SX8655 res. touch */
 
@@ -199,6 +196,8 @@ lcd_wvga {				\
  		nand = &gpmi;
 		emmc = &usdhc4;
 		rpmsg = &rpmsg;
+		gpc = &gpc;
+		gpu3d = &gpu3d;
  	};
 
 	backlight_lcd {
@@ -602,12 +601,6 @@ lcd_wvga {				\
 			timing_lcd: CONFIG_PICOCOMA9X_LCD_TIMING;
 		};
 	};
-};
-#endif
-
-#ifndef CONFIG_PICOCOMA9X_GPU
-&gpu {
-	status = "disabled";
 };
 #endif
 
