--- a/arch/arm/boot/dts/picocoremx6sx.dts
+++ b/arch/arm/boot/dts/picocoremx6sx.dts
@@ -152,10 +152,6 @@ lcd_wvga {				\
 #undef CONFIG_PICOCOREMX6SX_UART_C_RTSCTS
 #endif
 
-/* IF NAND is used, eMMC can´t be used */
-#ifdef CONFIG_PICOCOREMX6SX_NAND
-#undef CONFIG_PICOCOREMX6SX_EMMC
-#endif
 
 
 #include "imx6sx.dtsi"
@@ -169,6 +165,8 @@ lcd_wvga {				\
  		nand = &gpmi;
  		emmc = &usdhc2;
 		rpmsg = &rpmsg;
+		gpc = &gpc;
+		gpu3d = &gpu3d;
  	};
 
 #if defined(CONFIG_PICOCOREMX6SX_I2C_B) && (CONFIG_PICOCOREMX6SX_LCDIF0 == DISPLAY_LCD)
