Add support for TSC2004 on fsimx6ul

--- a/arch/arm/boot/dts/efusa7ul.dts
+++ b/arch/arm/boot/dts/efusa7ul.dts
@@ -61,6 +61,7 @@ wvga {					\
  * - PCAP touch based on Focaltech controller (FT5x06), on Touch Connector
  * - PCAP touch based on Sitronix controller (ST1633i), on Touch Connector
  * - PCAP touch based on Ilitek controller (ILI12xx), on Touch Connector
+ * - PCAP touch based on TI controller (TSC2004), on aStone2EDT2 adapter
  *
  * On efusA7UL, all touches use the same interrupt line and I2C bus, so do not
  * select more than one entry! Select none if you do not need touch support.
@@ -71,6 +72,7 @@ wvga {					\
 //#define CONFIG_EFUSA7UL_CAPTOUCH_FT5x06
 //#define CONFIG_EFUSA7UL_CAPTOUCH_SITRONIX
 //#define CONFIG_EFUSA7UL_CAPTOUCH_ILITEK
+//#define CONFIG_EFUSA7UL_CAPTOUCH_TSC2004
 
 /* CMA: Set 64 MB for Continuous Memory Allocator */
 #define CONFIG_EFUSA7UL_CMA_SIZE 0x4000000
@@ -746,6 +748,25 @@ wvga {					\
 		reg = <0x41>;
 		interrupt-parent = <&gpio5>;
 		interrupts = <0 IRQ_TYPE_EDGE_FALLING>;
+	};
+#endif
+
+#ifdef CONFIG_EFUSA7UL_CAPTOUCH_TSC2004
+	tsc2004@4a {
+		compatible = "ti,tsc2004";
+		reg = <0x4a>;
+		vio-supply = <&reg_vref_3v3>;
+		interrupts-extended = <&gpio5 0 IRQ_TYPE_EDGE_FALLING>;
+		touchscreen-fuzz-x = <4>;
+		touchscreen-fuzz-y = <7>;
+		touchscreen-fuzz-pressure = <20>;
+		touchscreen-size-x = <4096>;
+		touchscreen-size-y = <4096>;
+		touchscreen-max-pressure = <2048>;
+		touchscreen-inverted-y;
+		ti,x-plate-ohms = <280>;
+		ti,pre-charge-time = <4>;
+		ti,sense-time-sel = <3>;
 	};
 #endif
 };
