--- a/arch/arm/boot/dts/picocoremx6ul100.dts
+++ b/arch/arm/boot/dts/picocoremx6ul100.dts
@@ -545,7 +545,7 @@ wvga {					\
 
 #ifdef CONFIG_PICOCOREMX6UL100_I2C_A
 &i2c1 {
-	clock_frequency = <100000>;
+	clock-frequency = <100000>;
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_i2c1>;
 	status = "okay";
@@ -554,7 +554,7 @@ wvga {					\
 
 #ifdef CONFIG_PICOCOREMX6UL100_I2C_D
 &i2c2 {
-	clock_frequency = <100000>;
+	clock-frequency = <100000>;
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_i2c2>;
 	status = "okay";
