Fix rtc-pfc856063 driver
Git commit a775c68d8fa383cc972ff7ec166b3a7cfaceeafe
Add 12.5pF setting for RTC PCF85063TP, fix two bugs
introduced some changes, that were meanwhile applied in the mainline
driver as well.

Revert this commit so the driver is mainline again.

The mainline driver needs a different device tree entry for the 12.5pF,
setting  so we need to change the device trees with this setting as
well.

--- a/arch/arm/boot/dts/picocoremx6sx.dts
+++ b/arch/arm/boot/dts/picocoremx6sx.dts
@@ -708,7 +708,7 @@ lcd_wvga {				\
 	rtc85063@51 {
 		compatible = "nxp,pcf85063";
 		reg = <0x51>;
-		cap_12_5pf;
+		quartz-load-femtofarads = <12500>;
 	};
 };
 #endif /* CONFIG_PICOCOREMX6SX_I2C_C */
