--- a/arch/arm/boot/dts/picocoremx6ul.dts
+++ b/arch/arm/boot/dts/picocoremx6ul.dts
@@ -645,7 +645,7 @@ wvga {					\
 	rtc85063: rtc85063@51 {
 		compatible = "nxp,pcf85063";
 		reg = <0x51>;
-		cap_12_5pf;
+		quartz-load-femtofarads = <12500>;
 	};
 
 	rtc85263: rtc85263@51 {
