--- a/arch/arm/boot/dts/picocoremx6ul100.dts
+++ b/arch/arm/boot/dts/picocoremx6ul100.dts
@@ -224,21 +224,30 @@ wvga {					\
 	};
 
 #ifdef CONFIG_PICOCOREMX6UL100_BL_CTRL
-	backlight_ldb {
+#if (CONFIG_PICOCOREMX6UL100_LCDIF0 == DISPLAY_LCD)
+	backlight_lcd {
 		compatible = "pwm-backlight";
-		power-supply = <&reg_ldb_bl>;
-#ifdef CONFIG_PICOCOREMX6UL100_CAPTOUCH_TSC2004
+		power-supply = <&reg_lcd_bl>;
 		pwms = <&pca963x 1 640000 0>;
 		brightness-levels = <0 1 5 10 18 28 41 56
 				     73 92 113 137 163 192 222 255>;
-#else
-		pwms = <&pwm7 0 250000 PWM_POLARITY_INVERTED>;
-		brightness-levels = <135 143 151 159 167 175 183 191
-				     199 207 215 223 231 239 247 255>;
-#endif
 		default-brightness-level = <14>;
 		fb-names = "mxs-lcdif";
 	};
+#endif
+
+#if (CONFIG_PICOCOREMX6UL100_LCDIF0 == DISPLAY_LVDS)
+	backlight_ldb {
+		compatible = "pwm-backlight";
+		power-supply = <&reg_ldb_bl>;
+
+		pwms = <&pwm7 0 250000 PWM_POLARITY_INVERTED>;
+		brightness-levels = <135 143 151 159 167 175 183 191
+				     199 207 215 223 231 239 247 255>;
+		default-brightness-level = <14>;
+		fb-names = "mxs-lcdif";
+	};
+#endif
 #endif
 
 	regulators {
@@ -291,18 +300,26 @@ wvga {					\
 #endif
 
 #ifdef CONFIG_PICOCOREMX6UL100_BL_CTRL
-		reg_ldb_bl: ldb-bl {
+#if (CONFIG_PICOCOREMX6UL100_LCDIF0 == DISPLAY_LCD)
+		reg_lcd_bl: lcd-bl {
 			compatible = "regulator-fixed";
-			regulator-name = "ldb-bl";
-#ifdef CONFIG_PICOCOREMX6UL100_CAPTOUCH_TSC2004
+			regulator-name = "lcd-bl";
 			gpio = <&pca963x 0 GPIO_ACTIVE_HIGH>;
-#else
-			gpio = <&gpio5 4 GPIO_ACTIVE_HIGH>;
-#endif
 			regulator-min-microvolt = <3300000>;
 			regulator-max-microvolt = <3300000>;
 			enable-active-high;
 		};
+#endif
+#if (CONFIG_PICOCOREMX6UL100_LCDIF0 == DISPLAY_LVDS)
+		reg_ldb_bl: ldb-bl {
+			compatible = "regulator-fixed";
+			regulator-name = "ldb-bl";
+			gpio = <&gpio5 4 GPIO_ACTIVE_HIGH>;
+			regulator-min-microvolt = <3300000>;
+			regulator-max-microvolt = <3300000>;
+			enable-active-high;
+		};
+#endif
 #endif
 
 #ifdef CONFIG_PICOCOREMX6UL100_AUDIO
@@ -774,7 +791,7 @@ wvga {					\
 	/* Display bus pattern: RGB=0, RBG=1, GBR=2, GRB=3, BRG=4, BGR=5; */
 	//pattern = <4>;
 	//pattern = <2>;
-#ifdef CONFIG_PICOCOREMX6UL100_CAPTOUCH_TSC2004
+#if (CONFIG_PICOCOREMX6UL100_LCDIF0 == DISPLAY_LCD)
  	pattern = <5>;
 #else
  	pattern = <0>;
