--- a/arch/arm/boot/dts/picocoma7.dts
+++ b/arch/arm/boot/dts/picocoma7.dts
@@ -711,6 +711,9 @@ lcd_wvga {				\
 
 				/* LCD_DEN */
 				MX6UL_PAD_LCD_DATA19__GPIO3_IO24		0x0b0b0
+
+				/* GPIO1 */
+				MX6UL_PAD_GPIO1_IO09__GPIO1_IO09	0x1b0b0
 			>;
 };
 
