--- a/arch/arm64/boot/dts/F+S/Makefile
+++ b/arch/arm64/boot/dts/F+S/Makefile
@@ -29,7 +29,8 @@ dtb-$(CONFIG_ARCH_MXC) += picocoremx8mm-lpddr4.dtb \
 			  picocoremx8mm-ddr3l-lcdif-adp-mipi2mipi1-ee0350et-2cp.dtb \
 			  picocoremx8mm-ddr3l-lcdif-adp-mipi2rgb.dtb \
 			  picocoremx8mm-ddr3l-lcdif-rgt070qyh-13cp.dtb
-dtb-$(CONFIG_ARCH_MXC) += efusmx8x.dtb
+dtb-$(CONFIG_ARCH_MXC) += efusmx8x.dtb \
+			  efusmx8x-lcdif-j070wvtc0211.dtb
 dtb-$(CONFIG_ARCH_MXC) += picocoremx8mn-lpddr4.dtb \
 			  picocoremx8mn-lpddr4-lcdif-tc358775-g070y2-l01.dtb \
 			  picocoremx8mn-lpddr4-lcdif-tc358775-j070wvtc0211.dtb \
