--- a/arch/arm/configs/fsimx6sx_defconfig
+++ b/arch/arm/configs/fsimx6sx_defconfig
@@ -216,6 +216,7 @@ CONFIG_BT_HCIUART=y
 CONFIG_BT_HCIUART_H4=y
 CONFIG_CFG80211=m
 CONFIG_NL80211_TESTMODE=y
+CONFIG_CFG80211_INTERNAL_REGDB=y
 CONFIG_CFG80211_WEXT=y
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
