--- a/arch/arm64/configs/fsimx8x_defconfig
+++ b/arch/arm64/configs/fsimx8x_defconfig
@@ -490,6 +490,7 @@ CONFIG_DRM_PANEL_SIMPLE=y
 CONFIG_DRM_PANEL_LVDS=y
 CONFIG_DRM_PANEL_RAYDIUM_RM67191=y
 CONFIG_DRM_PANEL_SEIKO_43WVF1G=y
+CONFIG_DRM_PANEL_NOVATEK_NT35521=y
 CONFIG_DRM_TOSHIBA_TC358775=y
 CONFIG_DRM_FSL_IMX_LVDS_BRIDGE=y
 CONFIG_DRM_SII902X=m
@@ -645,6 +646,7 @@ CONFIG_LEDS_CLASS=y
 CONFIG_LEDS_GPIO=y
 CONFIG_LEDS_PWM=y
 CONFIG_LEDS_SYSCON=y
+CONFIG_LEDS_PCA963X=y
 CONFIG_LEDS_TRIGGER_DISK=y
 CONFIG_LEDS_TRIGGER_HEARTBEAT=y
 CONFIG_LEDS_TRIGGER_CPU=y
