--- a/arch/arm64/configs/fsimx8x_defconfig
+++ b/arch/arm64/configs/fsimx8x_defconfig
@@ -667,6 +667,8 @@ CONFIG_RTC_DRV_PCF2127=y
 CONFIG_RTC_DRV_EFI=y
 CONFIG_RTC_DRV_CROS_EC=y
 CONFIG_RTC_DRV_PL031=y
+CONFIG_RTC_DRV_PCF85063=y
+CONFIG_RTC_DRV_PCF85263=y
 CONFIG_RTC_DRV_SNVS=y
 CONFIG_RTC_DRV_IMX_SC=y
 CONFIG_DMADEVICES=y
