Fix some build time warnings
- Add missing group to iomuxc-node for picocoremx8mn-ddr3l-lcdif-
  tc358775-j070wvtc0211.dts
- Add missing braces to if statement un lontium-lt9211.c
- Fix size computation of static array in rtc-pcf85263.c
- Remove unused variable in fsl_sai.c

--- a/arch/arm64/boot/dts/F+S/picocoremx8mn-ddr3l-lcdif-tc358775-j070wvtc0211.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mn-ddr3l-lcdif-tc358775-j070wvtc0211.dts
@@ -131,9 +131,11 @@
 };
 
 &iomuxc {
+	imx8mn-picocoremx8mx {
 		pinctrl_touch: touch_grp {
 			fsl,pins = <
 				MX8MN_IOMUXC_GPIO1_IO13_GPIO1_IO13	0x00104
 			>;
 		};
+	};
 };
