Use the right pcie driver for efusmx8x

--- a/arch/arm64/boot/dts/F+S/efusmx8x.dts
+++ b/arch/arm64/boot/dts/F+S/efusmx8x.dts
@@ -844,9 +844,10 @@
 
 #ifdef CONFIG_EFUSMX8X_WLAN
 &pcieb {
-	ext_osc = <0>;
+	compatible = "fsl,imx8qxp-pcie","snps,dw-pcie";
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_pcieb>;
+	ext_osc = <0>;
 	status = "okay";
 };
 #endif
