--- a/arch/arm64/boot/dts/F+S/picocoremx8mm-lcdif-tc358764-j070wvtc0211.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mm-lcdif-tc358764-j070wvtc0211.dts
@@ -7,129 +7,20 @@
  */
 
 #define CONFIG_PICOCOREMX8MM_MIPI_DSI_LVDS
-#define CONFIG_PICOCOREMX8MM_INVERTED_XY
+#define CONFIG_IMX8MM_INVERTED_XY
+
+#define IMX8MM_LVDS_RESET_GPIO_BANK		gpio4
+#define IMX8MM_LVDS_RESET_GPIO_NUM		31
+
+#define IMX8MM_TOUCH_INTERRUPT_GPIO_BANK	gpio1
+#define IMX8MM_TOUCH_INTERRUPT_GPIO_NUM		0
+
+#define IMX8MM_TOUCH_RESET_GPIO_BANK gpio1
+#define IMX8MM_TOUCH_RESET_GPIO_NUM 13
+
+#define IMX8MM_TOUCH_I2C i2c2
+#define IMX8MM_BACKLIGHT_PWM pwm2
+
 #include "picocoremx8mm.dts"
+#include "displays/imx8mm-lcdif-tc358764-j070wvtc0211.dtsi"
 
-&lcdif {
-	status = "okay";
-	/* important to overwrite max-res otherwise DRM lcdif will fail to
-	 * find a suitable connector
-	 */
-	max-res = <4096>, <4096>;
-};
-
-&mipi_dsi {
-	status = "okay";
-
-	panel@0{
-		status = "okay";
-		compatible = "toshiba,fus-tc358775";
-		reg = <0>;
-		pinctrl-names = "default";
-		pinctrl-0 = <&pinctrl_mipi_dsi_lvds_en>;
-#if CONFIG_PICOCOREMX8MM_BOARD_REVISION >= 130
-		reset-gpios = <&gpio4 31 GPIO_ACTIVE_HIGH>;
-#else
-		reset-gpios = <&gpio1 13 GPIO_ACTIVE_HIGH>;
-#endif
-		vddc-supply = <&reg_vref_1v2>;
-		vddio-supply = <&reg_vref_1v8>;
-		vddlvds-supply = <&reg_vref_3v3>;
-		vlcd-supply = <&reg_vlcd>;
-		dsi,format = <0x0>; /* MIPI_DSI_FMT_RGB888 */
-		dsi,lanes = <4>;
-		/* MIPI_DSI_MODE_VIDEO MIPI_DSI_MODE_VIDEO_BURST
-		 * MIPI_DSI_MODE_VIDEO_AUTO_VERT
-		 */
-		dsi,flags = <0xB>;
-		refresh-rate = <60>;
-                rotate = <0>;
-		panel-width-mm = <154>;
-		panel-height-mm = <85>;
-		reg,address = <
-			/* dsi basic parameters in lp mode */
-			0x013c 0x0114 0x0164 0x0168
-			0x016C 0x0170 0x0134 0x0210
-			0x0104 0x0204
-			/* Timing and mode settings */
-			0x0450 0x0454 0x0458 0x045C
-			0x0460 0x0464 0x04A0 0x04A0 0x0504
-			/* color mapping settings	*/
-			0x0480 0x0484 0x0488 0x048C 0x0490
-			0x0494 0x0498
-			/* LVDS enable */
-			0x049C
-		>;
-		reg,value = <
-			/* dsi basic parameters in lp mode */
-			0x10002 0x1 0x0 0x0
-			0x00000	0x0 0x1F 0x1F
-			0x00001 0x1
-			/* Timing and mode settings */
-			0x03200120 0x1A0014 0xD20320 0x170001
-			0x1501E0 0x1 0x44802D 0x4802D 0x4
-			/* color mapping settings	*/
-			0x3020100 0x8050704 0xF0E0A09 0x100D0C0B
-			0x12111716 0x1B151413 0x61A1918
-			0x00000031
-		>;
-
-		display-timings {
-			native-mode = <&timing0>;
-			timing0: jd_j070wvtc0211 {
-				clock-frequency = <33500000>;
-				hactive = <800>;
-				vactive = <480>;
-				hback-porch = <20>;
-				hfront-porch = <247>;
-				hsync-len = <5>;
-				vback-porch = <22>;
-				vfront-porch = <23>;
-				vsync-len = <1>;
-				pixelclk-active = <0>;
-			};
-		};
-	};
-};
-
-&i2c2 {
-	/* touch I2C */
-	focaltech@38 {
-		compatible = "focaltech,fts";
-		reg = <0x38>;
-#if CONFIG_PICOCOREMX8MM_BOARD_REVISION >= 130
-		interrupt-parent = <&gpio1>;
-		interrupts = <0 IRQ_TYPE_EDGE_FALLING>;
-		focaltech,irq-gpio = <&gpio1 0 IRQ_TYPE_EDGE_FALLING>;
-#else
-		interrupt-parent = <&gpio4>;
-		interrupts = <31 IRQ_TYPE_EDGE_FALLING>;
-		focaltech,irq-gpio = <&gpio4 31 IRQ_TYPE_EDGE_FALLING>;
-#endif
-#ifdef CONFIG_PICOCOREMX8MM_INVERTED_XY
-		focaltech,touchscreen-inverted-x;
-		focaltech,touchscreen-inverted-y;
-#endif
-
-#if CONFIG_PICOCOREBBDSI_BOARD_REVISION >= 130
-#if CONFIG_PICOCOREMX8MM_BOARD_REVISION >= 130
-		focaltech,reset-gpio = <&gpio1 13 GPIO_ACTIVE_LOW>;
-#else
-		focaltech,reset-gpio = <&gpio1 0 GPIO_ACTIVE_LOW>;
-#endif
-#else
-		focaltech,reset-gpio = <&gpio1 10 GPIO_ACTIVE_LOW>;
-#endif
-		focaltech,num-max-touches = <10>;
-		focaltech,display-coords = <0 0 800 480>;
-	};
-};
-
-/{
-	backlight_ldb {
-		pwms = <&pwm2 0 250000 PWM_POLARITY_INVERTED>;
-		brightness-levels = <135 143 151 159 167 175 183 191
-				     199 207 215 223 231 239 247 255>;
-		default-brightness-level = <14>;
-	};
-};
