net: phy: realtek: Support SSC for the RTL8211F
Backported from commit 0a80cd6171e89147e20ef45b700dda870b1dee85

By default Spread-Spectrum Clocking (SSC) is disabled
on the RTL8211F. Enable it for following pins:

- 'rtl821x,enable-clkout-ssc' initialize and enable ssc on clk_out
- 'rtl821x,enable-sysclk-ssc' initialize and enable ssc
   on system clock
- 'rtl821x,enable-rxc-ssc' initialize and enable ssc on rxc

--- a/arch/arm64/boot/dts/F+S/picocoremx8mmr2.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mmr2.dts
@@ -178,6 +178,8 @@
 		ethphy4: ethernet-phy@4 {
 			compatible = "ethernet-phy-ieee802.3-c22";
 			reg = <4>;
+            rtl821x,enable-sysclk-ssc;
+            rtl821x,enable-rxc-ssc;
             reset-gpios = <&gpio1 5 GPIO_ACTIVE_LOW>;
             reset-assert-us = <10000>;
             reset-deassert-us = <50000>;
