Add rtl8211f phy led mode fixup via device tree
The rtl8211f phy fixup set the register 0x10 (LED_CNFG) to Mode B. In
Mode B, LEDs are configured as follows:

LED0 = not used
LED1 = BLINK for Activity (10/100/1000)
LED2 = ON for good Link (10/100/1000)

--- a/arch/arm64/boot/dts/F+S/picocoremx8mmr2.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mmr2.dts
@@ -180,6 +180,7 @@
 			reg = <4>;
             rtl821x,enable-sysclk-ssc;
             rtl821x,enable-rxc-ssc;
+            rtl821x,led-cnfg-mode-b;
             reset-gpios = <&gpio1 5 GPIO_ACTIVE_LOW>;
             reset-assert-us = <10000>;
             reset-deassert-us = <50000>;
